# DistantSupervision

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
.circleci/: config.yml
src/: CMakeLists.txt  CMakelists.txt  knowledge_base.cc  knowledge_base.hh
test/: CMakeLists.txt  CMakelists.txt  main.cpp  test_i_NER.txt  test_i_RE.txt  test_knowledge_base.cc
